--- a/Projects/todo-list/src/app/footer/footer.component.scss
+++ b/Projects/todo-list/src/app/footer/footer.component.scss
@@ -2,18 +2,20 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    position: relative;
+    bottom: -94px;
 }
 
 footer input{
     width: 80vw;
     height: 8vh;
-    margin-top: 19vh; // 13vh when it changes 
     border: none;
     text-align: center;
     color: white;
     background-color: #AF7EEB;
+    margin: 2vh;
 }
-
 footer input::placeholder{
     color: white;
     font-size: 1.5em;
@@ -24,7 +26,11 @@ footer button{
     background-color: red;
     color: white;
     border-radius: 30px;
-    margin-top: 2vh;
     height: 41px;
     border: none;
+    margin-bottom: 2vh;
+}
+
+.marginTop{
+    margin-top: 13vw;
 }
