--- a/Projects/todo-list/src/app/components/footer/footer.component.html
+++ b/Projects/todo-list/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <input [ngClass]="{'marginTop': inputTask?.length === 0}" id="inputTask" maxlength="73" placeholder="Type our task here...">
 
-    <ng-template [ngIf]="inputTask?.length != 0" >
+    <ng-template [ngIf]="inputTask?.length != 0 || listCheckedTask?.length != 0" >
         <button (click)="deleteAll()">DELETAR TODOS</button>
     </ng-template>
     
