--- a/Projects/pokedex-project/src/styles.scss
+++ b/Projects/pokedex-project/src/styles.scss
@@ -1,6 +1,8 @@
 @import './styles/variables.scss';
 @import './styles/reset.scss';
-@import './styles//rem-calc.scss';
+@import './styles/rem-calc.scss';
+@import './styles/btn.scss';
+@import './styles/animations.scss';
 
 html{
   font-family: 'Roboto', sans-serif;
