--- a/Projects/pokedex-project/src/app/shared/poke-list/poke-list.component.html
+++ b/Projects/pokedex-project/src/app/shared/poke-list/poke-list.component.html
@@ -1,19 +1,32 @@
-<ng-template ngFor let-poke [ngForOf]="getAllPokes">
-  
-  <a href="#" class="poke" *ngIf="poke.status">
-    <div class="poke__status">
-      <h2>{{ poke.name }}</h2>
-  
-      <ul>
-        <li *ngFor="let value of poke.status.types" > {{ value.type.name }} </li>
-      </ul>
-    </div>
-  
-    <div class="poke__image">
-      <img src="assets/bg/bg-bubbles.svg" alt="bubbles-background-image">
-      <img class="poke-img" [src]="poke.status.sprites.other.dream_world.front_default" [alt]="poke.name">
-    </div>
-  </a>
+<poke-search (emitSearch)="getSearch($event)"></poke-search>
 
-</ng-template>
+<section class="list">
 
+  <ng-template ngFor let-poke [ngForOf]="getAllPokes">
+
+    <a [routerLink]="['details', poke.status.id]" class="poke" *ngIf="poke.status">
+      <div class="poke__status">
+        <h2>{{ poke.name }}</h2>
+
+        <ul>
+          <li *ngFor="let value of poke.status.types"> {{ value.type.name }} </li>
+        </ul>
+      </div>
+
+      <div class="poke__image">
+        <img src="assets/bg/bg-bubbles.svg" alt="bubbles-background-image">
+        <img class="poke-img" [src]="poke.status.sprites.other.dream_world.front_default" [alt]="poke.name">
+      </div>
+    </a>
+
+  </ng-template>
+
+  <img
+    src="assets/error.png"
+    alt="Deu erro na mostragem do pokemon"
+    width="100%"
+    *ngIf="apiError"
+  >
+
+
+</section>
