--- a/Projects/pokedex-project/src/app/shared/poke-search/poke-search.component.html
+++ b/Projects/pokedex-project/src/app/shared/poke-search/poke-search.component.html
@@ -1,4 +1,4 @@
 <form>
-  <input type="text" placeholder="Buscar Pokémon...">
+  <input type="text" #searchInput (keyup)="search(searchInput.value)" placeholder="Buscar Pokémon...">
   <img class="searchIcon" src="assets/icons/search.svg" alt="Buscar Pokémon">
 </form>
